# dev_build_cm

./: CMakeLists.txt
devtest/: CMakeLists.txt
devtest/base/: base.cm
devtest/pipe/: pipe.cm
